# SecureAccess

./: .coveragerc  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  app.py  build.py  connectors.py  database.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
docs/: api.md  architecture.md  connectors.md  deployment.md
lossless-claw-fixes/src/: compaction.ts  engine.ts
lossless-claw-fixes/src/store/: conversation-store.ts  summary-store.ts
lossless-claw-fixes/tui/: README.md
src/secure_access/: __init__.py  app.py
src/secure_access/auth/: __init__.py  password.py
src/secure_access/connectors/: __init__.py  base.py  manager.py
src/secure_access/database/: __init__.py  models.py
src/secure_access/models/: __init__.py  role.py  user.py
src/secure_access/routes/: __init__.py
src/secure_access/utils/: __init__.py  csv_export.py  date_utils.py
tests/: __init__.py  conftest.py  test_auth.py  test_connectors.py  test_database.py
