[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "secure-access"
version = "1.0.0"
description = "User Access Management Platform for Security Professionals"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Todd Nicholas"}]
requires-python = ">=3.10"
keywords = ["security", "access-management", "iam", "rbac", "audit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "customtkinter>=5.2.0",
    "pillow>=10.0.0",
    "bcrypt>=4.0.0",
    "reportlab>=4.0.0",
]

[project.scripts]
secure-access = "src.secure_access.app:main"

[project.urls]
Homepage = "https://github.com/Toddni8022/SecureAccess"
Repository = "https://github.com/Toddni8022/SecureAccess"
"Bug Tracker" = "https://github.com/Toddni8022/SecureAccess/issues"

[tool.ruff]
target-version = "py310"
line-length = 120
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.coverage.run]
source = ["src", "database", "connectors"]
omit = ["tests/*", "build.py"]

[tool.coverage.report]
show_missing = true
